--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "rei",
   "license": "MIT",
   "scripts": {
-    "dev": "parcel ./src/index.html -o",
+    "dev": "parcel ./src/index.html --open",
     "build": "parcel build ./src/index.html --no-source-maps"
   },
   "dependencies": {
